outputs/csi300-test/treevoo/2025-07-28_00-24-08/problem_iter32_response7.txt_stdout.txt
Traceback (most recent call last):
  File "/home/rjj/reevo/problems/csi300/eval.py", line 9, in <module>
    import gpt
  File "/home/rjj/reevo/problems/csi300/gpt.py", line 2
    # Compute daily returns
                           ^
IndentationError: expected an indented block after function definition on line 1
